# serializer version: 1
# name: test_post_process
  '''
  BEGIN:VCALENDAR
  VERSION:2.0
  PRODID:-//Dates Calendar//mxm.dk//
  COLOR:yellow
  NAME:Dates Calendar
  REFRESH-INTERVAL;VALUE=DURATION:PT1H
  SOURCE:https://mause.me/blueroom/dates.ics
  X-PUBLISHED-TTL:PT1H
  X-WR-CALNAME:Dates Calendar
  X-WR-TIMEZONE:Australia/Perth
  BEGIN:VTIMEZONE
  TZID:Australia/Perth
  COMMENT:This timezone only works from 1970-01-01 to 2038-01-01.
  BEGIN:STANDARD
  DTSTART:19700101T000000
  TZNAME:AWST
  TZOFFSETFROM:+0800
  TZOFFSETTO:+0800
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:19741027T030000
  RDATE:19831030T030000,19911117T030000,20061203T030000,20071028T030000,2008
   1026T030000
  TZNAME:AWDT
  TZOFFSETFROM:+0800
  TZOFFSETTO:+0900
  END:DAYLIGHT
  BEGIN:STANDARD
  DTSTART:19750302T030000
  RDATE:19840304T030000,19920301T030000,20070325T030000,20080330T030000,2009
   0329T030000
  TZNAME:AWST
  TZOFFSETFROM:+0900
  TZOFFSETTO:+0800
  END:STANDARD
  END:VTIMEZONE
  END:VCALENDAR
  
  '''
# ---
# name: test_post_process_event
  '''
  BEGIN:VCALENDAR
  VERSION:2.0
  PRODID:-//Dates Calendar//mxm.dk//
  COLOR:yellow
  NAME:Dates Calendar
  REFRESH-INTERVAL;VALUE=DURATION:PT1H
  SOURCE:https://mause.me/blueroom/dates.ics
  X-PUBLISHED-TTL:PT1H
  X-WR-CALNAME:Dates Calendar
  X-WR-TIMEZONE:Australia/Perth
  BEGIN:VTIMEZONE
  TZID:Australia/Perth
  COMMENT:This timezone only works from 1970-01-01 to 2038-01-01.
  BEGIN:STANDARD
  DTSTART:19700101T000000
  TZNAME:AWST
  TZOFFSETFROM:+0800
  TZOFFSETTO:+0800
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:19741027T030000
  RDATE:19831030T030000,19911117T030000,20061203T030000,20071028T030000,2008
   1026T030000
  TZNAME:AWDT
  TZOFFSETFROM:+0800
  TZOFFSETTO:+0900
  END:DAYLIGHT
  BEGIN:STANDARD
  DTSTART:19750302T030000
  RDATE:19840304T030000,19920301T030000,20070325T030000,20080330T030000,2009
   0329T030000
  TZNAME:AWST
  TZOFFSETFROM:+0900
  TZOFFSETTO:+0800
  END:STANDARD
  END:VTIMEZONE
  BEGIN:VEVENT
  SUMMARY:Test Event (Tickets AVAILABLE)
  DTSTART;TZID=Australia/Perth:20200101T140000
  DTEND;TZID=Australia/Perth:20200101T160000
  DTSTAMP:20200101T040000Z
  UID:123 2020-01-01T14:00:00+08:00
  DESCRIPTION:https://example.com/\n\n<p>This is a test event</p>\n\nUpdated
   : 12:00PM\, January  1\, 2020
  LAST-MODIFIED:20200101T040000Z
  LOCATION:Backrooms
  END:VEVENT
  END:VCALENDAR
  
  '''
# ---
